--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ img {
 						</td>
 						<td>
 							<a href="location_3276.html" rel="external" data-ajax="flase" >
-								<label>Location</label>
+								<label>Carrow Rd. Norwich UK</label>
 							</a>
 						</td>
 					</tr>
