--- a/video_3279.html
+++ b/video_3279.html
@@ -14,9 +14,11 @@
 
 <link rel="stylesheet" href="css/jquery.mobile-1.4.0.css" />
 
-<link rel="stylesheet" href="css/wooden_theme.css" />
+<link rel="stylesheet" href="css/theme.css" />
 
 <link rel="stylesheet" href="css/common_layout.css" />
+
+<!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
 
@@ -114,7 +116,7 @@ $(document).ready(function(){
 
 	
 
-			<p>No video upload</p>
+			<p class="no_data">No video upload</p>
 
             
 
